--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<img src="https://github.com/frodriguezcer/marimekkoPEC2.github.io/blob/main/marimekko.PNG">
+<img src="https://github.com/frodriguezcer/marimekkoPEC2.github.io/blob/main/marimekko.png">
