--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<img src="https://github.com/frodriguezcer/marimekkoPEC2.github.io/blob/main/marimekko.png">
+<img src="https://github.com/frodriguezcer/marimekkopec2.github.io/blob/main/marimekko.png" alt="Marimekko vacunas por marca y país">
