--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<img src="https://github.com/frodriguezcer/marimekkopec2.github.io/blob/main/marimekko.png" alt="Marimekko vacunas por marca y país">
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Visualización de datos PEC2: Marimekko</title>
+</head>
+<body>
+    <h1>Visualización de datos PEC2: Small multiple</h1>
+    <h2>Por: Francisco José Rodríguez Cerezo</h2>
+
+    <!-- Coloca la ruta correcta de tu imagen -->
+    <img src="marimekko.png" alt="Marimekko de vacunas recibidas por país y marca">
+
+    
+</body>
+</html>
